<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/marvelblack"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/roundedtextbox"
        android:backgroundTint="@color/marvelred"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/lg_welcome_message"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedtextbox"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lg_email"
                style="@style/lg_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/lg_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    tools:text="dh@digitalhouse.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lg_password"
                style="@style/lg_textInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/lg_textInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:text="dh@digitalhouse.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/lg_passwordRemember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/marvelred"
                android:checked="true"
                android:text="@string/lg_remember" />

            <Button
                android:id="@+id/lg_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="LOG IN"
                app:backgroundTint="@color/marvelred" />

            <Button
                android:id="@+id/lg_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:outlineSpotShadowColor="@color/white"
                android:text="@string/lg_register"
                android:textColor="@color/textinputblack"
                app:backgroundTint="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>